--- a/modules/eb-hadoop/templates/mapred-site.erb
+++ b/modules/eb-hadoop/templates/mapred-site.erb
@@ -20,12 +20,12 @@ censed under the Apache License, Version 2.0 (the "License");
 
         <property>
                 <name>mapreduce.jobhistory.address</name>
-                <value><%=scope.lookupvar("HADOOP_JOBHISTORY_HOST")%>:10020</value>
+                <value><%=scope.lookupvar("eb-hadoop::params::HADOOP_JOBHISTORY_HOST")%>:10020</value>
         </property>
 
         <property>
                 <name>mapreduce.jobhistory.webapp.address</name>
-                <value><%=scope.lookupvar("HADOOP_JOBHISTORY_HOST")%>:19888</value>
+                <value><%=scope.lookupvar("eb-hadoop::params::HADOOP_JOBHISTORY_HOST")%>:19888</value>
         </property>
 
 </configuration>
