--- a/modules/eb-hadoop/templates/hadoop-profile.erb
+++ b/modules/eb-hadoop/templates/hadoop-profile.erb
@@ -1,5 +1,6 @@
 #env params
 export HADOOP_PREFIX=<%=scope.lookupvar("eb-hadoop::params::HADOOP_PREFIX") %>
+export HADOOP_HOME=<%=scope.lookupvar("eb-hadoop::params::HADOOP_PREFIX") %>
 export PATH=<%=scope.lookupvar("eb-hadoop::params::PATH") %>
 
 #TODO
